--- a/young/Cargo.toml
+++ b/young/Cargo.toml
@@ -1,10 +1,8 @@
-workspace = { members = ["young"] }
 [package]
-name = "guessing_game"
+name = "young"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-young = {path = "young"}
